--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HouseSelect"></activity>
+        <activity android:name=".ExistHouse"></activity>
+        <activity android:name=".NewHouse" />
+        <activity android:name=".HouseSelect" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="Roomii">
@@ -22,7 +24,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
